change form id to class

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <main>
       <!-- Loads the specified .html file -->
       <div class="container">
-        <form id="form-search" class="search-box">
+        <form class="form search-box">
           <input type="text" name="search" placeholder="Search images..." />
           <button type="submit">Search</button>
         </form>
